--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     />
 
     <!-- Vite-built CSS bundle -->
-    <link rel="stylesheet" href="%BASE_URL%assets/index.css" />
+    <link rel="stylesheet" href="%BASE_URL%src/index.css" />
   </head>
   <body>
     <div id="root"></div>
 
     <!-- Vite-built JS bundle --> 
-    <script type="module" src="%BASE_URL%assets/index.js"></script>
+    <script type="module" src="%BASE_URL%src/main.jsx"></script>
   </body>
 </html>
