--- a/index.html
+++ b/index.html
@@ -1,30 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="%BASE_URL%vite.svg" />
-
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Indian Heritage Culture</title>
-
-    <!-- External CSS/CDN are fine -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-
-    <!-- Vite-built CSS bundle -->
-    <link rel="stylesheet" href="%BASE_URL%src/index.css" />
+    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- Vite-built JS bundle --> 
     <script type="module" src="%BASE_URL%src/main.jsx"></script>
   </body>
 </html>
