--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icons/main_logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="icons/main_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>India's Heritage and Culture</title>
     <base href="/indian-heritage-culture/">
